fixed: alignment of menu items; product__image size changed dinamically;

--- a/src/components/footer/footer.component.less
+++ b/src/components/footer/footer.component.less
@@ -1,3 +1,7 @@
 .footer {
     display: flex;
+
+    &__menu {
+        margin-bottom: 30px;
+    }
 }
