--- a/src/components/header/header.component.less
+++ b/src/components/header/header.component.less
@@ -1,3 +1,7 @@
 .header {
     display: flex;
+
+    &__menu {
+        margin-top: 23px;
+    }
 }
