--- a/src/components/layout/layout.component.less
+++ b/src/components/layout/layout.component.less
@@ -6,8 +6,5 @@
         display: inline-flex;
         flex-flow: column wrap;
         justify-content: space-between;
-        width: 100%;
-        max-width: calc(100% - 2*@panel-width);
-        padding: 30px 0;
     }
 }
