--- a/src/components/logo/logo.component.less
+++ b/src/components/logo/logo.component.less
@@ -1,4 +1,5 @@
 .logo {
+    padding-left: 20px;
 
     &__text {
         font-size: 20px;
