--- a/src/components/menu/menu.component.less
+++ b/src/components/menu/menu.component.less
@@ -5,9 +5,8 @@
 
     &__item {
         position: relative;
-        max-width: calc(100%/7);
+        max-width: calc(100% / 7);
         width: 100%;
-        padding-left: 20px;
         font-size: 13px;
 
         &:hover > .menu__text:before {
@@ -16,6 +15,7 @@
     }
 
     &__text {
+        padding-left: 20px;
         color: #818181;
         vertical-align: middle;
 
@@ -35,6 +35,6 @@
     }
 
     &__icon {
-        margin-right: 20px;
+        margin-left: 20px;
     }
 }
