--- a/src/components/panel/panel.component.less
+++ b/src/components/panel/panel.component.less
@@ -6,7 +6,6 @@
     width: 100%;
     max-width: 60px;
     padding: 30px 0;
-    cursor: pointer;
 
     &_left {
         border-right: 1px solid #f5f5f5;
