--- a/src/components/section/section.component.less
+++ b/src/components/section/section.component.less
@@ -6,6 +6,11 @@
         text-align: center;
     }
 
+    &__picture {
+        height: auto;
+        max-width: 100%;
+    }
+
     &__product {
         width: calc(3 * 100% / 7);
     }
